[package]
name = "cries"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", default-features = false, features = ["full"] }
aws-config = { version = "1.1.1", default-features = false }
aws-sdk-ec2instanceconnect = { version = "1.9.0", default-features = false }
syslog = "6.0"
log = "0.4"
regex = "1.10"
anyhow = "1.0"
users = "0.11"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
